--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <h4>Vuoi diventare un inter professionista?</h4>
           <p class="center light">Ti piacerebbe intare le ranked di altri per lavoro? Anche tu odi i jungler che non ti fanno vincere le partite (tutta colpa loro) e ti costringono a rimanere bronzo 2? Contattaci e il nostro esperto in trolling (<a class="blue-text text-darken-3" href="https://www.facebook.com/francesco.lando.14">Francesco</a>) ti spiegherà passo passo come diventare un professionista e guadagnare trollando!</p>
-          <a href="https://i.imgur.com/9Uqc2nhg.png" class="btn btn-fin waves-effect waves-light grey-text text-darken-4 lime" type="submit" name="action">PORC*DIO SI<i class="material-icons right">directions_run</i>
+          <a href="https://i.imgur.com/9Uqc2nhg.png" class="btn btn-fin waves-effect waves-light grey-text text-darken-4 lime" type="submit" name="action">PORCOD1O SI<i class="material-icons right">directions_run</i>
           </a>
         </div>
       </div>
