--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>JUNGLER INFAME</title>
   <meta name="description" content="Non ne puoi più di questi jungler che non ti permettono di scalare? Visita il nostro sito abbiamo qualcosa che per te ;)"/>
-
+  
+  <!-- FB OPEN GRAPH -->
+  <meta property="og:url" content="http://www.nytimes.com/2015/02/19/arts/international/when-great-minds-dont-think-alike.html" />
+  <meta property="og:title" content="When Great Minds Don’t Think Alike" />
+  <meta property="og:description" content="How much does culture influence creative thinking?" />
+  <meta property="og:image" content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg" />
+  
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
