--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <meta name="description" content="Non ne puoi più di questi jungler che non ti permettono di scalare? Visita il nostro sito abbiamo qualcosa che per te ;)"/>
   
   <!-- FB OPEN GRAPH -->
-  <meta property="og:url" content="http://www.nytimes.com/2015/02/19/arts/international/when-great-minds-dont-think-alike.html" />
-  <meta property="og:title" content="When Great Minds Don’t Think Alike" />
-  <meta property="og:description" content="How much does culture influence creative thinking?" />
-  <meta property="og:image" content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg" />
+  <meta property="og:url" content="https://alexpiks.github.io/GiunglaX/index.html" />
+  <meta property="og:title" content="JUNGLER INFAME" />
+  <meta property="og:description" content="Non ne puoi più di questi jungler che non ti permettono di scalare? Visita il nostro sito abbiamo qualcosa che per te ;)" />
+  <meta property="og:image" content="https://alexpiks.github.io/GiunglaX/Dog.jpg" />
   
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
