--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:url" content="https://alexpiks.github.io/GiunglaX/index.html" />
   <meta property="og:title" content="JUNGLER INFAME" />
   <meta property="og:description" content="Non ne puoi più di questi jungler che non ti permettono di scalare? Visita il nostro sito abbiamo qualcosa che per te ;)" />
-  <meta property="og:image" content="https://alexpiks.github.io/GiunglaX/Dog.jpg" />
+  <meta property="og:image" content="https://alexpiks.github.io/GiunglaX/Dog1.jpg" />
   
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
